# KSP-console-to-PC-save-converter

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  common.py  craft-parts-renamer.py  discord_bot.py  docker-compose.development.yml  docker-compose.yml  env.sample  extractor.py  games.json.sample  models.py  pyproject.toml  savegame-folder-renamer.py  sfs-parts-renamer.py  xbox_save_manager.py
.github/workflows/: docker.yml  python.yml
Downloader (modified spark downloader)/: .env  README.md  games.json
Downloader (modified spark downloader)/src/xbox_savegame_downloader/: common.py  xbox_save_manager.py
Downloader (modified spark downloader)/src/xbox_savegame_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/xbox_savegame_downloader/: auth_manager_ex.py  cli.py  discord_bot.py  xbox_save_manager.py
tests/: di_root.testdata  mc.testdata  ps.testdata  test_blobmetadata.py  test_jsonpath.py
tests/testdata/: atoms_di.json  atoms_mc.json  blobs_di.json  blobs_mc.json  blobs_pspark.json
transforms/: dummy_cls.py  minecraft_lce.py  project_spark.py
