[project]
name = "xbox-savegame-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord.py>=2.5.2",
    "python-dotenv>=1.1.0",
    "xbox-webapi @ git+https://github.com/OpenXbox/xbox-webapi-python@0a7aeac9f746466001964743d7a1e8e670560a2b",
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "jsonpath-ng>=1.7.0",
    "mega @ git+https://github.com/NTFSvolume/mega.py@master",
]

[tool.uv]
package = true

[project.scripts]
xbox-savegame-discord_bot = "xbox_savegame_downloader.discord_bot:main"
xbox-savegame-cli = "xbox_savegame_downloader.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
